generated/nixidy/prod/oauth2-proxy/Deployment-oauth2-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: oauth2-proxy
    app.kubernetes.io/component: authentication-proxy
    app.kubernetes.io/instance: oauth2-proxy
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: oauth2-proxy
    app.kubernetes.io/part-of: oauth2-proxy
  name: oauth2-proxy
  namespace: security
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: oauth2-proxy
      app.kubernetes.io/name: oauth2-proxy
  template:
    metadata:
      annotations:
        checksum/config: c0329892592df8b1519fac51e84aee8cf879bb8e157e5a04f6556b38b5a2435b
        checksum/google-secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
        checksum/redis-secret: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret: 8fa6fdae65861caa2986544b8860a5205be1937328c8ec2bad6bad076b9e2425
      labels:
        app: oauth2-proxy
        app.kubernetes.io/component: authentication-proxy
        app.kubernetes.io/instance: oauth2-proxy
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: oauth2-proxy
        app.kubernetes.io/part-of: oauth2-proxy
    spec:
      automountServiceAccountToken: true
      containers:
        - args:
            - --http-address=0.0.0.0:4180
            - --https-address=0.0.0.0:4443
            - --metrics-address=0.0.0.0:44180
            - --config=/etc/oauth2_proxy/oauth2_proxy.cfg
          image: quay.io/oauth2-proxy/oauth2-proxy:v7.10.0
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /ping
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            timeoutSeconds: 1
          name: oauth2-proxy
          ports:
            - containerPort: 4180
              name: http
              protocol: TCP
            - containerPort: 44180
              name: metrics
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /ready
              port: http
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources: {}
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsGroup: 2000
            runAsNonRoot: true
            runAsUser: 2000
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - mountPath: /etc/oauth2_proxy/oauth2_proxy.cfg
              name: configmain
              subPath: oauth2_proxy.cfg
      enableServiceLinks: true
      serviceAccountName: oauth2-proxy
      volumes:
        - configMap:
            defaultMode: 420
            name: oauth2-proxy
          name: configmain
