generated/nixidy/prod/oauth2-proxy/HTTPRoute-oauth2-proxy.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: security
spec:
  hostnames:
    - oauth2-proxy.trdos.me
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 80
